<resources>
    <string name="app_name">Bubblefy</string>

    <string name="subtitle">Welcome back!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="rep_email">Repeat Email</string>
    <string name="rep_pass">Repeat Password</string>
    <string name="forgot_pass">Forgot password?</string>
    <string name="submit">Submit</string>
    <string name="enter_key">Enter Key</string>
    <string name="key_message">The one we sent to your email</string>
    <string name="terms">Accept Terms and Conditions</string>
    <string name="new_pass_message">Make sure to remember it this time ;)</string>
    <string name="new_password">New Password</string>
    <string name="change_password">Change Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="email_recovery_message">It\'s OK, no one is perfect.</string>
    <string name="send_key">Send Key</string>

    <string name="track_list">List</string>


    <!-- DEFAULT TRACK -->
    <string name="default_track_title">Título canción</string>
    <string name="default_track_author">Autor/a</string>

    <!-- Fragment [ Create Song ] -->
    <string name="action_cloudinary">Upload your music</string>
    <string name="create_song_titulo">Title</string>
    <string name="create_song_genre">Genre</string>
    <string name="create_song_file">Search song</string>
    <string name="action_accept">Upload</string>
    <string name="action_decline">Dismiss</string>

    <!-- State Dialog [ Create Song ] -->
    <string name="state_task_in_progress">Task in progress</string>
    <string name="state_wait">Please wait...</string>
    <string name="state_success_title">Success</string>
    <string name="state_task_completed">Everything was fine!</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="add_playlist">+</string>
    <string name="follow">Follow</string>


</resources>