<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Controller.NewPassword">
    <TextView
        android:text="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:padding="10dp"/>
    <TextView
        android:text="@string/reset_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:layout_marginBottom="10dp"/>
    <TextView
        android:text="@string/new_pass_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:layout_marginBottom="70dp"/>
    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/new_password"/>
    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/rep_pass"
        android:layout_marginBottom="70dp"/>

    <Button
        android:id="@+id/next_button"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:text="@string/change_password"/>

</LinearLayout>