<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".RecoveryEmail">
    <TextView
        android:text="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:padding="10dp"/>
    <TextView
        android:text="@string/forgot_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:layout_marginBottom="10dp"/>
    <TextView
        android:text="@string/email_recovery_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:layout_marginBottom="100dp"/>
    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_marginBottom="100dp"/>

    <Button
        android:id="@+id/next_button"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:text="@string/send_key"/>

</LinearLayout>