<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="edu.url.salle.eric.macia.bubblefy.controller.activity.RecoverKey">
    <TextView
        android:text="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:padding="10dp"
        android:layout_marginTop="150dp"/>
    <TextView
        android:text="@string/enter_key"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"/>
    <TextView
        android:text="@string/key_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:layout_marginTop="10dp"
        android:paddingBottom="90dp"/>
    <EditText
        android:width="1dp"
        android:color="@color/cardview_dark_background"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:maxLength="4"
        android:hint="_  _  _  _"
        android:textSize="40dp"
        android:layout_marginBottom="100dp"/>


    <Button
        android:id="@+id/next_button"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:text="@string/submit"/>



</LinearLayout>