<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/concert_background"
    android:orientation="vertical"
    android:padding="60dp"
    tools:context="edu.url.salle.eric.macia.bubblefy.controller.activity.LoginActivity">

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/ic_bubblefy_logo_white" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="146dp"
            android:layout_height="40dp"
            app:srcCompat="@drawable/ic_bubblefy_text_white" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_bold"
        android:text="Sign Up"
        android:layout_below="@+id/layout1"
        android:layout_marginTop="30dp"
        android:textColor="@color/colorTextPrimary"
        android:textSize="@dimen/text_size_big" />

    <LinearLayout
        android:id="@+id/layout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTextPrimary"
            android:textColorHint="@color/colorTextPrimary"
            android:id="@+id/usernameText"
            android:hint="@string/username"
            android:fontFamily="@font/open_sans_light"
            android:textSize="@dimen/text_size_medium"
            android:layout_marginTop="30dp"/>
        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTextPrimary"
            android:textColorHint="@color/colorTextPrimary"
            android:id="@+id/emailText"
            android:hint="@string/email"
            android:fontFamily="@font/open_sans_light"
            android:textSize="@dimen/text_size_medium"
            android:layout_marginTop="10dp"/>
        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTextPrimary"
            android:textColorHint="@color/colorTextPrimary"
            android:id="@+id/repeatEmailText"
            android:hint="@string/rep_email"
            android:fontFamily="@font/open_sans_light"
            android:textSize="@dimen/text_size_medium"
            android:layout_marginTop="10dp"/>
        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTextPrimary"
            android:textColorHint="@color/colorTextPrimary"
            android:id="@+id/passwordText"
            android:hint="@string/password"
            android:fontFamily="@font/open_sans_light"
            android:textSize="@dimen/text_size_medium"
            android:layout_marginTop="10dp"/>
        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTextPrimary"
            android:textColorHint="@color/colorTextPrimary"
            android:id="@+id/repeatPasswordText"
            android:hint="@string/rep_pass"
            android:fontFamily="@font/open_sans_light"
            android:textSize="@dimen/text_size_medium"
            android:layout_marginTop="10dp"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:id="@+id/checkbox"
            android:text="@string/terms"
            android:textColor="@color/colorTextPrimary"
            android:textColorHint="@color/colorSecondary"
            android:allowUndo="true"
            android:buttonTint="@color/colorSecondary"
            android:fontFamily="@font/open_sans_light"
            android:textSize="@dimen/text_size_smallmedium"
            android:layout_marginTop="15dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:background="@drawable/round_button"
            android:text="@string/sign_up"
            android:fontFamily="@font/open_sans"
            android:textColor="@color/colorTextPrimary"
            android:textSize="@dimen/text_size_smallmedium" />

    </LinearLayout>

</RelativeLayout>
